--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.3",
+    "@types/nodemailer": "^6.4.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
