--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["src"],
+  "include": ["src", "./types"],
   "exclude": ["node_modules"]
 }
